--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   qr_flutter: ^4.1.0
+  shadcn_ui: ^0.8.1
+  go_router: ^14.2.7
+  flutter_riverpod: ^2.5.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
