--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   google_fonts: ^6.2.1
   shared_preferences: ^2.3.2
+  qr_bar_code_scanner_dialog: ^0.0.5
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
